examples/errors/e0113.sdm
module example <https://example.com/api> is

  import [ skos:Unknown ]

end
